argo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: argo-rollout-go-http
spec:
  strategy:
    canary:
      canaryService: service-go-http-canary
      stableService: service-go-http-stable
      trafficRouting:
        alb:
          ingress: ingress-go-http
          rootService: service-go-http-root
          servicePort: 80
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: { duration: 10 }
        - setWeight: 60
        - pause: { duration: 10 }
        - setWeight: 80
        - pause: { duration: 10 }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: go-http
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-http
    spec:
      containers:
        - name: go-http
          image: seanturner026/kube-playground-http-server
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
          ports:
            - name: http
              containerPort: 3000
